list functionality done (10hrs)
took ages to figure out how this stuff works.
basic functionailty is there just need to get some data and disign more
interfaces

--- a/res/layout/activity_list_page.xml
+++ b/res/layout/activity_list_page.xml
@@ -1,36 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="horizontal" >
-
-    <ListView
-        android:id="@+id/listView1"
-        android:layout_width="404dp"
-        android:layout_height="wrap_content" >
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:divider="?android:attr/dividerHorizontal" >
 
-    </ListView>
-
-    <ListView
-        android:id="@+id/listView2"
-        android:layout_width="389dp"
-        android:layout_height="wrap_content" >
-
-    </ListView>
-
-    <ListView
-        android:id="@+id/listView3"
+    <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1" >
-
-    </ListView>
-
-    <ToggleButton
-        android:id="@+id/toggleButton1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_weight="1"
-        android:text="ToggleButton" />
+        android:orientation="vertical" >
+
+        <TextView
+            android:id="@+id/textView1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Manage Injury Records"
+            android:textSize="40sp" />
+
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="match_parent" >
+
+            <fragment
+                android:id="@+id/squad_list"
+                android:name="com.example.sportsfireinjury.SquadListFragment"
+                android:layout_width="fill_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1" />
+
+            <FrameLayout
+                android:id="@+id/player_list_container"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="1" >
+            </FrameLayout>
+        </LinearLayout>
+    </LinearLayout>
+
+    <FrameLayout
+        android:id="@+id/player_injury_detail_container"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_weight="1" >
+    </FrameLayout>
 
 </LinearLayout>
