--- a/res/layout/activity_list_page.xml
+++ b/res/layout/activity_list_page.xml
@@ -1,8 +1,10 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:divider="?android:attr/dividerHorizontal" >
+    android:divider="?android:attr/dividerHorizontal"
+    android:layout_marginLeft="16dp"
+    android:layout_marginRight="16dp"
+    android:showDividers="middle" >
 
     <LinearLayout
         android:layout_width="wrap_content"
