--- a/SportsfireInjury/res/layout/player_injury_form.xml
+++ b/SportsfireInjury/res/layout/player_injury_form.xml
@@ -247,11 +247,11 @@
             android:layout_row="4"
             android:text="Injured Body Part" />
 
-        <GridLayout
+        <RadioGroup
             android:layout_column="0"
             android:layout_columnSpan="3"
             android:layout_row="5"
-            android:columnCount="3" >
+            android:orientation="horizontal" >
 
                 <RadioButton
                     android:id="@+id/ir2b1"
@@ -270,7 +270,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="not applicable" />
-        </GridLayout>
+        </RadioGroup>
 
         <TextView
             android:id="@+id/TextView03"
