--- a/SportsfireInjury/res/layout/player_injury_form.xml
+++ b/SportsfireInjury/res/layout/player_injury_form.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="20sp"
         android:alignmentMode="alignBounds"
-        android:columnCount="3"
+        android:columnCount="2"
         android:orientation="horizontal"
         android:useDefaultMargins="true" >
 
@@ -65,7 +65,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_column="0"
-            android:layout_columnSpan="3"
+            android:layout_columnSpan="2"
             android:layout_gravity="fill"
             android:layout_row="1" />
 
@@ -77,162 +77,27 @@
             android:layout_row="2"
             android:text="Injured body part" />
 
-        <GridLayout
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_column="0"
-            android:layout_columnSpan="3"
-            android:layout_gravity="fill"
-            android:layout_row="3"
-            android:columnCount="3" >
+            android:layout_gravity="left"
+            android:layout_row="3" >
 
-            <CheckBox
-                android:id="@+id/ir2a1"
+            <Spinner
+                android:id="@+id/orchardSpinner"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_column="0"
-                android:layout_row="0"
-                android:onClick="onCheckBoxClick"
-                android:text="Head / Face" />
+                android:layout_gravity="left" />
 
-            <CheckBox
-                android:id="@+id/ir2a2"
-                android:layout_column="1"
-                android:layout_row="0"
-                android:onClick="onCheckBoxClick"
-                android:text="Shoulder / clavicula" />
-
-            <CheckBox
-                android:id="@+id/ir2a3"
-                android:layout_column="2"
-                android:layout_row="0"
-                android:onClick="onCheckBoxClick"
-                android:text="hip / groin" />
-
-            <CheckBox
-                android:id="@+id/ir2a4"
+            <Spinner
+                android:id="@+id/orchardSpinnerDetail"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_column="0"
-                android:layout_row="1"
-                android:onClick="onCheckBoxClick"
-                android:text="neck / cervical spine" />
+                android:layout_gravity="left"
+                android:visibility="invisible" />
 
-            <CheckBox
-                android:id="@+id/ir2a5"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_column="1"
-                android:layout_row="1"
-                android:onClick="onCheckBoxClick"
-                android:text="upper arm" />
-
-            <CheckBox
-                android:id="@+id/ir2a6"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_column="2"
-                android:layout_row="1"
-                android:onClick="onCheckBoxClick"
-                android:text="thigh" />
-
-            <CheckBox
-                android:id="@+id/ir2a7"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_column="0"
-                android:layout_row="2"
-                android:onClick="onCheckBoxClick"
-                android:text="sternum / ribs / upper back" />
-
-            <CheckBox
-                android:id="@+id/ir2a8"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_column="1"
-                android:layout_row="2"
-                android:onClick="onCheckBoxClick"
-                android:text="elbow" />
-
-            <CheckBox
-                android:id="@+id/ir2a9"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_column="2"
-                android:layout_row="2"
-                android:onClick="onCheckBoxClick"
-                android:text="knee" />
-
-            <CheckBox
-                android:id="@+id/ir2a10"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_column="0"
-                android:layout_row="3"
-                android:onClick="onCheckBoxClick"
-                android:text="abdomen" />
-
-            <CheckBox
-                android:id="@+id/ir2a11"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_column="1"
-                android:layout_row="3"
-                android:onClick="onCheckBoxClick"
-                android:text="forearm" />
-
-            <CheckBox
-                android:id="@+id/ir2a12"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_column="2"
-                android:layout_row="3"
-                android:onClick="onCheckBoxClick"
-                android:text="lower leg / Achilles tendon" />
-
-            <CheckBox
-                android:id="@+id/ir2a13"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_column="0"
-                android:layout_row="4"
-                android:onClick="onCheckBoxClick"
-                android:text="low back / sacrum / pelvis" />
-
-            <CheckBox
-                android:id="@+id/ir2a14"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_column="1"
-                android:layout_row="4"
-                android:onClick="onCheckBoxClick"
-                android:text="wrist" />
-
-            <CheckBox
-                android:id="@+id/ir2a15"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_column="2"
-                android:layout_row="4"
-                android:onClick="onCheckBoxClick"
-                android:text="ankle" />
-
-            <CheckBox
-                android:id="@+id/ir2a16"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_column="0"
-                android:layout_row="5"
-                android:onClick="onCheckBoxClick"
-                android:text="hand / finger / thumb" />
-
-            <CheckBox
-                android:id="@+id/ir2a17"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_column="1"
-                android:layout_row="5"
-                android:onClick="onCheckBoxClick"
-                android:text="foot / toe" />
-        </GridLayout>
+        </LinearLayout>
 
         <TextView
             android:id="@+id/TextView03"
@@ -244,7 +109,7 @@
 
         <RadioGroup
             android:layout_column="0"
-            android:layout_columnSpan="3"
+            android:layout_columnSpan="2"
             android:layout_row="5"
             android:orientation="horizontal" >
 
@@ -277,7 +142,7 @@
 
         <GridLayout
             android:layout_column="0"
-            android:layout_columnSpan="3"
+            android:layout_columnSpan="2"
             android:layout_row="7"
             android:columnCount="3" >
 
@@ -377,7 +242,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_column="0"
-            android:layout_columnSpan="3"
+            android:layout_columnSpan="2"
             android:layout_row="8" >
 
             <CheckBox
@@ -415,8 +280,8 @@
                 android:layout_height="wrap_content"
                 android:contentDescription="Diagnosis: "
                 android:ems="10"
-                android:inputType="text"
-                android:imeOptions="actionDone" />
+                android:imeOptions="actionDone"
+                android:inputType="text" />
         </LinearLayout>
 
         <TextView
@@ -432,7 +297,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_column="0"
-            android:layout_columnSpan="3"
+            android:layout_columnSpan="2"
             android:layout_row="11"
             android:orientation="horizontal" >
 
@@ -453,7 +318,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_column="0"
-            android:layout_columnSpan="3"
+            android:layout_columnSpan="2"
             android:layout_marginLeft="10sp"
             android:layout_marginRight="20sp"
             android:layout_row="12"
@@ -490,7 +355,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_column="0"
-            android:layout_columnSpan="3"
+            android:layout_columnSpan="2"
             android:layout_row="14"
             android:orientation="horizontal" >
 
@@ -520,7 +385,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_column="0"
-            android:layout_columnSpan="3"
+            android:layout_columnSpan="2"
             android:layout_row="16"
             android:orientation="horizontal" >
 
@@ -549,7 +414,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_column="0"
-            android:layout_columnSpan="3"
+            android:layout_columnSpan="2"
             android:layout_row="18" >
 
             <CheckBox
@@ -593,9 +458,9 @@
                     android:id="@+id/ir84text"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:inputType="text"
+                    android:ems="30"
                     android:imeOptions="actionDone"
-                    android:ems="30" />
+                    android:inputType="text" />
             </LinearLayout>
         </GridLayout>
 
@@ -612,7 +477,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_column="0"
-            android:layout_columnSpan="3"
+            android:layout_columnSpan="2"
             android:layout_row="20"
             android:orientation="horizontal" >
 
@@ -653,7 +518,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_column="0"
-            android:layout_columnSpan="3"
+            android:layout_columnSpan="2"
             android:layout_row="22" >
 
             <CheckBox
@@ -675,8 +540,31 @@
             android:id="@+id/saveForm"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_column="0"
+            android:layout_row="23"
             android:onClick="onSaveForm"
             android:text="Save Form" />
+
+        <Space
+            android:layout_width="148dp"
+            android:layout_height="15dp"
+            android:layout_column="1"
+            android:layout_row="23" />
+
+        <Space
+            android:layout_width="100dp"
+            android:layout_column="0"
+            android:layout_row="24" />
+
+        <Space
+            android:layout_width="100dp"
+            android:layout_column="1"
+            android:layout_row="24" />
+
+        <Space
+            android:layout_width="100dp"
+            android:layout_column="0"
+            android:layout_row="25" />
     </GridLayout>
 
 </ScrollView>
