--- a/SportsfireInjury/res/layout/player_injury_form.xml
+++ b/SportsfireInjury/res/layout/player_injury_form.xml
@@ -95,8 +95,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="left"
-                android:visibility="invisible" />
-
+                android:visibility="gone" />
         </LinearLayout>
 
         <TextView
@@ -140,103 +139,26 @@
             android:layout_row="6"
             android:text="Type of Injury" />
 
-        <GridLayout
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_column="0"
-            android:layout_columnSpan="2"
-            android:layout_row="7"
-            android:columnCount="3" >
+            android:layout_gravity="left"
+            android:layout_row="7" >
 
-            <CheckBox
-                android:id="@+id/ir31"
-                android:layout_column="0"
-                android:layout_row="0"
-                android:onClick="onCheckBoxClick"
-                android:text="concussion with or without loss of consciousness" />
+            <Spinner
+                android:id="@+id/orchardSpinner2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left" />
 
-            <CheckBox
-                android:id="@+id/ir32"
-                android:layout_column="1"
-                android:layout_row="0"
-                android:onClick="onCheckBoxClick"
-                android:text="lesion of meniscus or cartilage" />
-
-            <CheckBox
-                android:id="@+id/ir33"
-                android:layout_column="2"
-                android:layout_row="0"
-                android:onClick="onCheckBoxClick"
-                android:text="haermatoma / contusion / bruise" />
-
-            <CheckBox
-                android:id="@+id/ir34"
-                android:layout_column="0"
-                android:layout_row="1"
-                android:onClick="onCheckBoxClick"
-                android:text="fracture" />
-
-            <CheckBox
-                android:id="@+id/ir35"
-                android:layout_column="1"
-                android:layout_row="1"
-                android:onClick="onCheckBoxClick"
-                android:text="muscle rupture / strain / tear / cramps" />
-
-            <CheckBox
-                android:id="@+id/ir36"
-                android:layout_column="2"
-                android:layout_row="1"
-                android:onClick="onCheckBoxClick"
-                android:text="abrasion" />
-
-            <CheckBox
-                android:id="@+id/ir37"
-                android:layout_column="0"
-                android:layout_row="2"
-                android:onClick="onCheckBoxClick"
-                android:text="other bone injury" />
-
-            <CheckBox
-                android:id="@+id/ir38"
-                android:layout_column="1"
-                android:layout_row="2"
-                android:onClick="onCheckBoxClick"
-                android:text="laceration" />
-
-            <CheckBox
-                android:id="@+id/ir39"
-                android:layout_column="2"
-                android:layout_row="2"
-                android:onClick="onCheckBoxClick"
-                android:text="dislocation / subluxation" />
-
-            <CheckBox
-                android:id="@+id/ir310"
-                android:layout_column="0"
-                android:layout_row="3"
-                android:onClick="onCheckBoxClick"
-                android:text="tendon injury / rupture / tendinosis / bursitis" />
-
-            <CheckBox
-                android:id="@+id/ir311"
-                android:layout_column="1"
-                android:layout_row="3"
-                android:onClick="onCheckBoxClick"
-                android:text="nerve injury" />
-
-            <CheckBox
-                android:id="@+id/ir312"
-                android:layout_column="2"
-                android:layout_row="3"
-                android:onClick="onCheckBoxClick"
-                android:text="sprain / ligament injury" />
-
-            <CheckBox
-                android:id="@+id/ir313"
-                android:layout_column="0"
-                android:layout_row="4"
-                android:onClick="onCheckBoxClick"
-                android:text="dental injury" />
-        </GridLayout>
+            <Spinner
+                android:id="@+id/orchardSpinnerDetail2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left"
+                android:visibility="gone" />
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -558,13 +480,21 @@
 
         <Space
             android:layout_width="100dp"
-            android:layout_column="1"
+            android:layout_column="0"
             android:layout_row="24" />
 
         <Space
             android:layout_width="100dp"
-            android:layout_column="0"
-            android:layout_row="25" />
+            android:layout_row="1" />
+
+        <Space
+            android:layout_width="100dp"
+            android:layout_height="169dp"
+            android:layout_row="7" />
+
+        <Space
+            android:layout_width="100dp"
+            android:layout_row="24" />
     </GridLayout>
 
 </ScrollView>
