--- a/SportsfireInjury/res/layout/activity_main_page.xml
+++ b/SportsfireInjury/res/layout/activity_main_page.xml
@@ -14,14 +14,14 @@
             android:layout_width="match_parent"
             android:layout_height="139dp"
             android:onClick="ButtonOnClick"
-            android:text="Button" />
+            android:text="Injury" />
 
         <Button
             android:id="@+id/button2"
             android:layout_width="match_parent"
             android:layout_height="100dp"
             android:onClick="ButtonOnClick"
-            android:text="Button" />
+            android:text="Screening" />
     </LinearLayout>
 
 </ScrollView>
