--- a/SportsfireInjury/res/values/styles.xml
+++ b/SportsfireInjury/res/values/styles.xml
@@ -2,11 +2,19 @@
 
 	<style name="AppTheme" parent="android:Theme.Light" />
 	<style name="SwitchStyle">
-		<item name="android:layout_width">0dp</item>
+		<item name="android:layout_width">0dip</item>
 		<item name="android:layout_height">wrap_content</item>
 		<item name="android:gravity">right</item>
 		<item name="android:layout_weight">1</item>
-		<item name="android:paddingRight">20dp</item>
-		<item name="android:paddingBottom">20dp</item>
+		<item name="android:paddingRight">20dip</item>
+		<item name="android:paddingBottom">20dip</item>
+		<item name="android:onClick">onSwitchClicked</item>
+	</style>
+	<style name="TestSpinnerOptionStyle">
+		<item name="android:layout_width">0dip</item>
+		<item name="android:layout_height">wrap_content</item>
+		<item name="android:entries">@array/TestChoices</item>
+		<item name="android:visibility">invisible</item>
+		<item name="android:layout_weight">1</item>
 	</style>
 </resources>
