--- a/SportsfireInjury/res/layout/screening_analysis_page.xml
+++ b/SportsfireInjury/res/layout/screening_analysis_page.xml
@@ -8,7 +8,7 @@
     android:showDividers="middle" >
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:orientation="vertical" >
@@ -45,7 +45,7 @@
         android:id="@+id/test_selection_container"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_weight="2" >
+        android:layout_weight="1.2" >
     </FrameLayout>
 
 </LinearLayout>
