--- a/SportsfireInjury/res/xml/pref_general.xml
+++ b/SportsfireInjury/res/xml/pref_general.xml
@@ -1,4 +1,16 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
+	<ListPreference
+        android:key="selected_season"
+        android:defaultValue="0"
+        android:negativeButtonText="@null"
+        android:positiveButtonText="@null"
+        android:title="Choose current season" />
+	<ListPreference
+        android:key="selected_week"
+        android:defaultValue="0"
+        android:negativeButtonText="@null"
+        android:positiveButtonText="@null"
+        android:title="Choose current week" />
 
     <CheckBoxPreference
         android:defaultValue="true"
