only show previous and input for quarterly data

--- a/SportsFireScreening/res/values/styles.xml
+++ b/SportsFireScreening/res/values/styles.xml
@@ -16,5 +16,14 @@
 		<item name="android:entries">@array/TestChoices</item>
 		<item name="android:visibility">invisible</item>
 		<item name="android:layout_weight">1</item>
+		
+		
 	</style>
+	<style name="TestSpinnerOptionStyle2">
+		<item name="android:layout_width">0dip</item>
+		<item name="android:layout_height">wrap_content</item>
+		<item name="android:entries">@array/TestChoices2</item>
+		<item name="android:visibility">invisible</item>
+		<item name="android:layout_weight">1</item>
+		</style>
 </resources>
