Bug fixes: Version in use
Wrong Column issue: FIXED
I also made a few changes to improve the speed of opening that page.
Before it loaded all the rows before it opened now it will open and
load in the rows bit by bit. Should feel more responsive.

Delete Data update Average: Sort of FIXED
I fixed this by setting it to 0.00 if you click on a field. However
this means if you accidentally select a field you will end up inputing.
Will try to think of a better fix.

Spelling errors: FIXED

--- a/SportsFireScreening/res/layout/screening_analysis_page.xml
+++ b/SportsFireScreening/res/layout/screening_analysis_page.xml
@@ -43,7 +43,7 @@
 
     <FrameLayout
         android:id="@+id/test_selection_container"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1" >
     </FrameLayout>
