--- a/SportsFireScreening/res/layout/screening_input_page.xml
+++ b/SportsFireScreening/res/layout/screening_input_page.xml
@@ -25,7 +25,7 @@
     </LinearLayout>
      <FrameLayout
         android:id="@+id/test_selection_container"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="0.6" >
     </FrameLayout>
