--- a/SportsFireScreening/res/xml/syncadapter.xml
+++ b/SportsFireScreening/res/xml/syncadapter.xml
@@ -1,5 +1,5 @@
 <sync-adapter xmlns:android="http://schemas.android.com/apk/res/android"
-    android:contentAuthority="com.sportsfire.sync.Provider"
+    android:contentAuthority="com.sportsfire.unique.screening.Provider"
     android:accountType="com.sportsfire.screening"
     android:supportsUploading="true"
 />
